--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -253,6 +253,7 @@ ul ul a {
                     <div class="modal-body">
                         <!-- <input type="text" placeholder="Type" id="m_type"><br> -->
                         <form action="/admin/addmarker" method="POST">
+                          <input value="no" name="isindex" id="isindex" type="hidden">
                             <select required class="form-control" required name="m_tool" id="m_type">
                                 <option value="ehr">LibreHealth EHR</option>
                                 <option value="toolkit">LibreHealth Toolkit</option>
